# gen_code

./: .gitignore  main.py  pyproject.toml
Rag/: langchain.py
Rag/Database/: chroma.py
Rag/Dataset/: load_dataset.py
Rag/Models/: VertexAiModels.py  prompts.py  text.py
rag/: langchain.py
ui/: app.py
ui/features/: improving.py  learning.py  understanding.py
utils/: setup.py
